--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,12 @@ textarea {
 textarea:hover {
   background-color: lightgray;
 }
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li.entryPic {
+  border-radius: 2rem;
+}
