--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,11 @@ ul {
 }
 
 li {
-  border-radius: 1rem;
-  width: 50%;
   margin: 1rem;
+}
+
+.viewEntry {
+  background-color: gray;
+  border-radius: 1rem;
+  padding: 1rem;
 }
